--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,9 @@
     <title>Video Chat</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
     <button onclick="joinRoom('room','Jack')">Join as Jack</button>
     <button onclick="joinRoom('room','James')">Join as James</button>
     <button onclick="joinRoom('room','Sarah')">Join as Sarah</button>
@@ -26,8 +28,29 @@
         <hr>
         <div id="messages"></div>
         <input type="text" id="chatInput" placeholder="Type a message">
+        <p id="mojis"></p>
     </div>
 
     <script src="vidChat.js" type="module"></script>
+    <script>
+        let emojis = [0x1F600, 0x1F604, 0x1F34A, 0x1F344, 0x1F37F, 0x1F363, 0x1F370, 0x1F355,
+            0x1F354, 0x1F35F, 0x1F6C0, 0x1F48E, 0x1F5FA, 0x23F0, 0x1F579, 0x1F4DA,
+            0x1F431, 0x1F42A, 0x1F439, 0x1F424]
+        
+        function handleMoji(emoji) {
+            textBox = document.getElementById("chatInput")
+            return function(){
+                textBox.value = textBox.value + emoji
+            }
+        }
+
+        function makeClickable(emojiCode, i) {
+            emoji = String.fromCodePoint(emojiCode)
+            window[`f_${i}`] = handleMoji(emoji)
+            return `<a onclick="f_${i}()" style="cursor: pointer;">${emoji}</a>`
+        }
+        document.getElementById("mojis").innerHTML = emojis.map((x,i) => makeClickable(x,i)).join(' ')
+    </script>
 </body>
+
 </html>
